<resources>
    // Running Mate App
    <string name="app_name">Running Mate</string>

    // Running Fragment
    <string name="alertdialog_rationale_location_title">Location permission needed</string>
    <string name="alertdialog_rationale_location_message">
        Without location permission enabled we can not track your run.
    </string>
    <string name="alertdialog_denied_location_title">Location permission denied</string>
    <string name="alertdialog_denied_location_message">
        Without location permission enabled we can not track your run.
        You can always change location permissions from system settings.
    </string>

    // Running Metrics Fragment
    <string name="button_running_start">Start</string>
    <string name="button_running_stop">Stop</string>
    <string name="text_view_running_pace_label">Pace</string>
    <string name="text_view_running_stopwatch_label">Time</string>
    <string name="text_view_running_distance_label">Distance (Km)</string>
    <string name="text_view_running_initial_time">00:00:00</string>
    <string name="text_view_running_initial_distance">0.00</string>
    <string name="text_view_running_initial_pace">00\' 00\"</string>
    <string name="text_view_running_calories_label">Calories (Kcal)</string>
    <string name="text_view_running_initial_calories">0</string>
    <string name="stop_run_message">It seems that you have not begun running.\nAre you sure you want to stop?\nYour data will not be saved.</string>

    <string name="see_all">See all</string>
    <string name="run">Run</string>
    <string name="feed">Feed</string>
    <string name="past">Recent Activity</string>
    <string name="past_title">Run on %1$s</string>
    <string name="distance">5.4 km</string>
    <string name="distance_string">%1$.1f km</string>
    <string name="time">15:50</string>
    <string name="walking_icon_desc">Walking Icon</string>
    <string name="empty_list">You still have not gone running. \n You can do it!</string>

    //Alert Box for deleting run
    <string name="run_delete_message">Are you sure you want to remove this run?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    // Toasts
    <string name="toast_error_run_save">Could not save run</string>

    // Notifications
    <string name="notification_tracking_service">Hey I\'m tracking your run</string>

    // Run Details Fragment
    <string name="text_view_run_details_pace_label">Pace</string>
    <string name="text_view_run_details_stopwatch_label">Time</string>
    <string name="text_view_run_details_distance_label">Distance (Km)</string>
    <string name="text_view_run_details_initial_time">00:00:00</string>
    <string name="text_view_run_details_initial_distance">0.00</string>
    <string name="text_view_run_details_initial_pace">00\' 00\"</string>
    <string name="text_view_run_details_calories_label">Calories (Kcal)</string>
    <string name="text_view_run_details_initial_calories">0</string>
    <string name="text_view_run_details_speed_label">Speed (Km/h)</string>
    <string name="text_view_run_details_initial_speed">0.00</string>
    <string name="btn_run_details_delete">Delete</string>
    <string name="btn_run_details_share">Share</string>
    <string name="text_view_run_details_elapsed_time_label">Elapsed Time</string>
    <string name="text_view_run_details_running_time_label">Running Time</string>
    <string name="text_view_run_summary_title">RunningMate</string>

    // Past Runs Activity
    <string name="past_runs">Activity</string>

    // Goals / Achievements Activity
    <string name="goals">Goals</string>
    <string name="goal_title">Title</string>
    <string name="goal_subtitle">This is a subtitle, to explain about the goal!</string>
    <string name="goal_description">This image represents the level you are in.</string>

    // Levels
    <string name="already_have_an_account">Already have an account? <font color='#FF6200EE'><b>Log In</b></font></string>
    <string name="welcome_messages">Hello, %1$s! You have &lt;b>%2$d new messages&lt;/b>.</string>
    <string name="current_level_progress_km_html">&lt;b> &lt;big>&lt;font color=\'#6F8C23\'>%.1f&lt;/font>&lt;/big>/%.0fkm&lt;/b></string>
    <string name="level_unlock_km">%.0fkm</string>
    <string name="taragui">Taragui</string>
    <string name="taragui_subtitle">Level 1: Taragui, The "yerba" that leads in Argentina.</string>
    <string name="cbse">CBSé</string>
    <string name="cbse_subtitle">Level 2: CBSé, Gather the good.</string>
    <string name="cruz_de_malta">Cruz de Malta</string>
    <string name="cruz_de_malta_subtitle">Level 3: Cruz de Malta, Soft and durable.</string>
    <string name="playadito">Playadito</string>
    <string name="playadito_subtitle">Level 4: Made with sticks.</string>
    <string name="rosamonte">Rosamonte</string>
    <string name="rosamonte_subtitle">Level 5: Rosamonte, The way to "cebar" the best mate.</string>
    <string name="merced">La Merced</string>
    <string name="merced_subtitle">Level 6: La Merced, A different "yerba".</string>
    <string name="achievements">Achievements</string>
    <string name="achievement_unlocked_description">Achievement Unlocked</string>
    <string name="achievement_description">Description of the achievement</string>
    <string name="level">Level</string>

    // Achievements
    <string name="max_distance_8_achievement_title">Run 8km</string>
    <string name="max_distance_8_achievement_subtitle">Run for more than 8km</string>
    <string name="max_distance_16_achievement_title">Run 16km</string>
    <string name="max_distance_16_achievement_subtitle">Run for more than 16km</string>
    <string name="max_distance_32_achievement_title">Run 32km</string>
    <string name="max_distance_32_achievement_subtitle">Run for more than 32km</string>
    <string name="max_distance_42_achievement_title">Run 42km</string>
    <string name="max_distance_42_achievement_subtitle">Run for more than 42km</string>

    <string name="max_speed_8_achievement_title">Speed 8km/h</string>
    <string name="max_speed_8_achievement_subtitle">Run at an average of 8km/h</string>
    <string name="max_speed_10_achievement_title">Speed 10km/h</string>
    <string name="max_speed_10_achievement_subtitle">Run at an average of 10km/h</string>
    <string name="max_speed_14_achievement_title">Speed 14km/h</string>
    <string name="max_speed_14_achievement_subtitle">Run at an average of 14km/h</string>
    <string name="max_speed_16_achievement_title">Speed 16km/h</string>
    <string name="max_speed_16_achievement_subtitle">Run at an average of 16km/h</string>

    <string name="max_kcal_500_achievement_title">500 Kcal</string>
    <string name="max_kcal_500_achievement_subtitle">Burn more than 500 kcal in one run.</string>
    <string name="max_kcal_1000_achievement_title">1000 Kcal</string>
    <string name="max_kcal_1000_achievement_subtitle">Burn more than 1000 kcal in one run.</string>
    <string name="max_kcal_2000_achievement_title">2000 Kcal</string>
    <string name="max_kcal_2000_achievement_subtitle">Burn more than 2000 kcal in one run.</string>
    <string name="max_kcal_3000_achievement_title">3000 Kcal</string>
    <string name="max_kcal_3000_achievement_subtitle">Burn more than 3000 kcal in one run.</string>

    <string name="max_time_30m_achievement_title">30 Minutes Run</string>
    <string name="max_time_30m_achievement_subtitle">Run for more than 30 minutes</string>
    <string name="max_time_1h_achievement_title">1 Hour Run</string>
    <string name="max_time_1h_achievement_subtitle">Run for more than 1 hour.</string>
    <string name="max_time_1h_30m_achievement_title">1 Hour 30 Minutes Run</string>
    <string name="max_time_1h_30m_achievement_subtitle">Run for more than 1 hour and 30 minutes</string>
    <string name="max_time_3h_achievement_title">3 Hours Run</string>
    <string name="max_time_3h_achievement_subtitle">Run for more than 3 hours</string>

    // Achievements categories
    <string name="achievement_category_time">Run Time</string>
    <string name="achievement_category_distance">Longest Run</string>
    <string name="achievement_category_speed">Fastest Run</string>
    <string name="achievement_category_calories">Calories Burned</string>
    <string name="achievement_category_streak">Streaks</string>

    <string name="empty" />
    <string name="achievements_empty_card">You have no achievements yet</string>
    <string name="achievements_card_title">Achievements</string>
    <string name="card_level_title">Level</string>


    // Spotify
    <string name="song_name">song-name</string>
    <string name="powered_by_spotify_download_the_app_to_use_it">Powered by Spotify®. Download the app to use it!</string>
    <string name="spotify_logo_description">Spotify Logo</string>

</resources>