<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/goal_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    android:elevation="8dp"
    android:layout_margin="8dp"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColorHighlight="@color/black"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/goal_image_card"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/goal_description" />

        <TextView
            android:id="@+id/goal_title_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/goal_title"/>

        <TextView
            android:id="@+id/goal_subtitle_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/goal_subtitle"/>

        <Button
            android:id="@+id/see_all_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:gravity="center"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>