<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/stopwatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stopwatch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:ems="8"
        android:gravity="center"
        android:text="@string/text_view_running_initial_time"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <TextView
        android:id="@+id/stopwatch_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_view_running_stopwatch_label"
        app:layout_constraintBottom_toBottomOf="@+id/stopwatch"
        app:layout_constraintEnd_toEndOf="@+id/stopwatch"
        app:layout_constraintStart_toStartOf="@+id/stopwatch" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:ems="4"
        android:gravity="center"
        android:text="@string/text_view_running_initial_distance"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_start_stop"
        app:layout_constraintEnd_toStartOf="@+id/pace"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopwatch" />

    <TextView
        android:id="@+id/distance_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_view_running_distance_label"
        app:layout_constraintBottom_toBottomOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="@+id/distance"
        app:layout_constraintStart_toStartOf="@+id/distance" />

    <TextView
        android:id="@+id/pace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:ems="5"
        android:text="@string/text_view_running_initial_pace"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/distance"
        app:layout_constraintTop_toTopOf="@+id/distance" />

    <TextView
        android:id="@+id/pace_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_view_running_pace_label"
        app:layout_constraintBottom_toBottomOf="@+id/pace"
        app:layout_constraintEnd_toEndOf="@+id/pace"
        app:layout_constraintStart_toStartOf="@+id/pace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start_stop"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        android:ems="7"
        android:text="@string/button_running_start"
        android:textSize="18sp"
        app:cornerRadius="28dp"
        app:icon="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance" />

</androidx.constraintlayout.widget.ConstraintLayout>