<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/badge_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:padding="10dp"
        android:alpha="0.4"
        android:contentDescription="@string/achievement_unlocked_description"
        android:src="@drawable/badge_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/achievement_title_name"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:text="@string/achievements"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/achievement_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/badge_icon"
        app:layout_constraintTop_toTopOf="@id/badge_icon"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/achievement_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/achievement_description"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/badge_icon"
        app:layout_constraintEnd_toEndOf="@+id/achievement_title_name"
        app:layout_constraintStart_toStartOf="@+id/achievement_title_name"
        app:layout_constraintTop_toBottomOf="@+id/achievement_title_name" />


</merge>

