<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/badge_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/badge_icon"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/achievement_unlocked_description"/>

        <TextView
            android:id="@+id/achievement_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievements"
            app:layout_constraintLeft_toRightOf="@id/badge_icon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            />

        <TextView
            android:id="@+id/achievement_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/achievement_description"
            app:layout_constraintLeft_toRightOf="@id/badge_icon"
            app:layout_constraintTop_toBottomOf="@id/achievement_title_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>